--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,9 @@ python_requires = >3.6
 py_modules = cli
 install_requires = 
     InstructorEmbedding==1.0.1
+    sentence_transformers>=2.2.0
     numpy
+    tqdm
 
 [options.entry_points]
 console_scripts =
