Add missing workflow version specifier

--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -48,4 +48,4 @@ jobs:
       with:
         python-version: '3.x'
     - name: Publish package
-      uses: pypa/gh-action-pypi-publish
+      uses: pypa/gh-action-pypi-publish@v1.8.9
